// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`editable text reverts host styles on slate-internal text spans: resolvedValue 1`] = `
.ms-18jqvbb [data-slate-string],
.ms-18jqvbb [data-slate-zero-width] {
  all: revert !important;
}

.ms-1azh6ix {
  margin: 0;
}

.ms-1fa0n4z {
  -webkit-text-decoration: none;
  text-decoration: none;
}

@media only screen and (min-width: 769px) {
  .ms-1uxgkzy {
    color: hsla(238, 87%, 49%, 1);
    font-family: Lato;
    font-size: 16px;
  }
}

@media only screen and (min-width: 576px) and (max-width: 768px) {
  .ms-1uxgkzy {
    color: hsla(238, 87%, 49%, 1);
    font-family: Lato;
    font-size: 16px;
  }
}

@media only screen and (max-width: 575px) {
  .ms-1uxgkzy {
    color: hsla(238, 87%, 49%, 1);
    font-family: Lato;
    font-size: 16px;
  }
}

@media only screen and (min-width: 769px) {
  .ms-1rv2riu {
    color: hsla(238, 87%, 49%, 1);
    font-family: Lato;
    font-size: 16px;
  }
}

@media only screen and (min-width: 576px) and (max-width: 768px) {
  .ms-1rv2riu {
    color: hsla(238, 87%, 49%, 1);
    font-family: Lato;
    font-size: 16px;
  }
}

@media only screen and (max-width: 575px) {
  .ms-1rv2riu {
    color: hsla(238, 87%, 49%, 1);
    font-family: Lato;
    font-size: 16px;
  }
}

@media only screen and (min-width: 769px) {
  .ms-c2x32f {
    color: hsla(238, 87%, 49%, 1);
    font-family: Lato;
    font-size: 16px;
  }
}

@media only screen and (min-width: 576px) and (max-width: 768px) {
  .ms-c2x32f {
    color: hsla(238, 87%, 49%, 1);
    font-family: Lato;
    font-size: 16px;
  }
}

@media only screen and (max-width: 575px) {
  .ms-c2x32f {
    color: hsla(238, 87%, 49%, 1);
    font-family: Lato;
    font-size: 16px;
  }
}

@media only screen and (min-width: 769px) {
  .ms-1armmxo {
    color: hsla(238, 87%, 49%, 1);
    font-family: Lato;
    font-size: 16px;
  }
}

@media only screen and (min-width: 576px) and (max-width: 768px) {
  .ms-1armmxo {
    color: hsla(238, 87%, 49%, 1);
    font-family: Lato;
    font-size: 16px;
  }
}

@media only screen and (max-width: 575px) {
  .ms-1armmxo {
    color: hsla(238, 87%, 49%, 1);
    font-family: Lato;
    font-size: 16px;
  }
}

@media only screen and (min-width: 769px) {
  .ms-xpmun0 {
    color: hsla(238, 87%, 49%, 1);
    font-family: Lato;
    font-size: 16px;
  }
}

@media only screen and (min-width: 576px) and (max-width: 768px) {
  .ms-xpmun0 {
    color: hsla(238, 87%, 49%, 1);
    font-family: Lato;
    font-size: 16px;
  }
}

@media only screen and (max-width: 575px) {
  .ms-xpmun0 {
    color: hsla(238, 87%, 49%, 1);
    font-family: Lato;
    font-size: 16px;
  }
}


NodeList [
  <div
    autocapitalize="false"
    autocorrect="false"
    class="ms-18jqvbb"
    contenteditable="false"
    data-slate-editor="true"
    data-slate-node="value"
    spellcheck="false"
    style="position: relative; outline: none; white-space: pre-wrap; word-wrap: break-word;"
    zindex="-1"
  >
    <p
      class="ms-1azh6ix ms-bl928z"
      data-slate-node="element"
    >
      <span
        data-slate-node="text"
      >
        <span
          class="ms-11y4ern"
          data-slate-leaf="true"
        >
          <span
            data-slate-length="0"
            data-slate-zero-width="z"
          >
            ﻿
          </span>
        </span>
      </span>
      <a
        class="ms-1fa0n4z"
        data-slate-inline="true"
        data-slate-node="element"
        href="https://www.bigcommerce.com/adyen"
        target="_blank"
      >
        <span
          data-slate-node="text"
        >
          <span
            class="ms-1uxgkzy"
            data-slate-leaf="true"
          >
            <span
              data-slate-string="true"
            >
              Adyen
            </span>
          </span>
        </span>
      </a>
      <span
        data-slate-node="text"
      >
        <span
          class="ms-d4g7bn"
          data-slate-leaf="true"
        >
          <span
            data-slate-length="0"
            data-slate-zero-width="z"
          >
            ﻿
          </span>
        </span>
      </span>
    </p>
    <p
      class="ms-1azh6ix ms-i6q3xv"
      data-slate-node="element"
    >
      <span
        data-slate-node="text"
      >
        <span
          class="ms-17lhxmg"
          data-slate-leaf="true"
        >
          <span
            data-slate-length="0"
            data-slate-zero-width="z"
          >
            ﻿
          </span>
        </span>
      </span>
      <a
        class="ms-1fa0n4z"
        data-slate-inline="true"
        data-slate-node="element"
        href="http://www.authorize.net/"
        target="_blank"
      >
        <span
          data-slate-node="text"
        >
          <span
            class="ms-1rv2riu"
            data-slate-leaf="true"
          >
            <span
              data-slate-string="true"
            >
              Authorize.net
            </span>
          </span>
        </span>
      </a>
      <span
        data-slate-node="text"
      >
        <span
          class="ms-ho267x"
          data-slate-leaf="true"
        >
          <span
            data-slate-length="0"
            data-slate-zero-width="z"
          >
            ﻿
          </span>
        </span>
      </span>
    </p>
    <p
      class="ms-1azh6ix ms-187z2p6"
      data-slate-node="element"
    >
      <span
        data-slate-node="text"
      >
        <span
          class="ms-1xuv1z2"
          data-slate-leaf="true"
        >
          <span
            data-slate-length="0"
            data-slate-zero-width="z"
          >
            ﻿
          </span>
        </span>
      </span>
      <a
        class="ms-1fa0n4z"
        data-slate-inline="true"
        data-slate-node="element"
        href="https://www.bigcommerce.com/bluesnap/"
        target="_blank"
      >
        <span
          data-slate-node="text"
        >
          <span
            class="ms-c2x32f"
            data-slate-leaf="true"
          >
            <span
              data-slate-string="true"
            >
              BlueSnap
            </span>
          </span>
        </span>
      </a>
      <span
        data-slate-node="text"
      >
        <span
          class="ms-r0mrdn"
          data-slate-leaf="true"
        >
          <span
            data-slate-length="0"
            data-slate-zero-width="z"
          >
            ﻿
          </span>
        </span>
      </span>
    </p>
    <p
      class="ms-1azh6ix ms-pr3x1c"
      data-slate-node="element"
    >
      <span
        data-slate-node="text"
      >
        <span
          class="ms-1l87blo"
          data-slate-leaf="true"
        >
          <span
            data-slate-length="0"
            data-slate-zero-width="z"
          >
            ﻿
          </span>
        </span>
      </span>
      <a
        class="ms-1fa0n4z"
        data-slate-inline="true"
        data-slate-node="element"
        href="https://support.bigcommerce.com/s/article/Connecting-with-Checkoutcom/"
        target="_blank"
      >
        <span
          data-slate-node="text"
        >
          <span
            class="ms-1armmxo"
            data-slate-leaf="true"
          >
            <span
              data-slate-string="true"
            >
              Checkout.com
            </span>
          </span>
        </span>
      </a>
      <span
        data-slate-node="text"
      >
        <span
          class="ms-1jv9mky"
          data-slate-leaf="true"
        >
          <span
            data-slate-length="0"
            data-slate-zero-width="z"
          >
            ﻿
          </span>
        </span>
      </span>
    </p>
    <p
      class="ms-1azh6ix ms-54ai1u"
      data-slate-node="element"
    >
      <span
        data-slate-node="text"
      >
        <span
          class="ms-1hc1szf"
          data-slate-leaf="true"
        >
          <span
            data-slate-length="0"
            data-slate-zero-width="z"
          >
            ﻿
          </span>
        </span>
      </span>
      <a
        class="ms-1fa0n4z"
        data-slate-inline="true"
        data-slate-node="element"
        href="http://www.cybersource.com/"
        target="_blank"
      >
        <span
          data-slate-node="text"
        >
          <span
            class="ms-xpmun0"
            data-slate-leaf="true"
          >
            <span
              data-slate-string="true"
            >
              CyberSource Direct
            </span>
          </span>
        </span>
      </a>
      <span
        data-slate-node="text"
      >
        <span
          class="ms-12kgvjh"
          data-slate-leaf="true"
        >
          <span
            data-slate-length="0"
            data-slate-zero-width="z"
          >
            ﻿
          </span>
        </span>
      </span>
    </p>
  </div>,
]
`;

exports[`editable text reverts host styles on slate-internal text spans: snapshot 1`] = `
{
  "cacheData": {
    "apiResources": {
      "Swatch": [
        {
          "id": "U3dhdGNoOmJkODYxMWM5LTNiZjItNDM3MS1iMmU4LTBmMmNlMDZjNDE1OA==",
          "value": {
            "__typename": "Swatch",
            "hue": 238,
            "id": "U3dhdGNoOmJkODYxMWM5LTNiZjItNDM3MS1iMmU4LTBmMmNlMDZjNDE1OA==",
            "lightness": 49,
            "saturation": 87,
          },
        },
      ],
      "Typography": [
        {
          "id": "VHlwb2dyYXBoeTowNGI4OTZlMC0wZWEyLTRkMTMtYmU3ZS0xYmY1M2VmMjBiZjc=",
          "value": {
            "__typename": "Typography",
            "id": "VHlwb2dyYXBoeTowNGI4OTZlMC0wZWEyLTRkMTMtYmU3ZS0xYmY1M2VmMjBiZjc=",
            "name": "Body",
            "style": [
              {
                "deviceId": "desktop",
                "value": {
                  "color": null,
                  "fontFamily": "Lato",
                  "fontSize": {
                    "unit": "px",
                    "value": 16,
                  },
                  "fontWeight": null,
                  "italic": null,
                  "letterSpacing": null,
                  "lineHeight": null,
                  "strikethrough": null,
                  "textAlign": null,
                  "underline": null,
                  "uppercase": null,
                },
              },
            ],
          },
        },
      ],
    },
    "localizedResourcesMap": {},
  },
  "document": {
    "data": {
      "key": "00000000-0000-0000-0000-000000000000",
      "props": {
        "children": {
          "columns": [
            {
              "deviceId": "desktop",
              "value": {
                "count": 12,
                "spans": [
                  [
                    12,
                  ],
                ],
              },
            },
          ],
          "elements": [
            {
              "key": "11111111-1111-1111-1111-111111111111",
              "props": {
                "propKey": {
                  "descendants": [
                    {
                      "children": [
                        {
                          "text": "",
                        },
                        {
                          "children": [
                            {
                              "text": "Adyen",
                              "typography": {
                                "id": "VHlwb2dyYXBoeTowNGI4OTZlMC0wZWEyLTRkMTMtYmU3ZS0xYmY1M2VmMjBiZjc=",
                                "style": [
                                  {
                                    "deviceId": "desktop",
                                    "value": {
                                      "color": {
                                        "alpha": 1,
                                        "swatchId": "U3dhdGNoOmJkODYxMWM5LTNiZjItNDM3MS1iMmU4LTBmMmNlMDZjNDE1OA==",
                                      },
                                    },
                                  },
                                ],
                              },
                            },
                          ],
                          "link": {
                            "payload": {
                              "openInNewTab": true,
                              "url": "https://www.bigcommerce.com/adyen",
                            },
                            "type": "OPEN_URL",
                          },
                          "type": "link",
                        },
                        {
                          "text": "",
                        },
                      ],
                      "type": "paragraph",
                    },
                    {
                      "children": [
                        {
                          "text": "",
                        },
                        {
                          "children": [
                            {
                              "text": "Authorize.net",
                              "typography": {
                                "id": "VHlwb2dyYXBoeTowNGI4OTZlMC0wZWEyLTRkMTMtYmU3ZS0xYmY1M2VmMjBiZjc=",
                                "style": [
                                  {
                                    "deviceId": "desktop",
                                    "value": {
                                      "color": {
                                        "alpha": 1,
                                        "swatchId": "U3dhdGNoOmJkODYxMWM5LTNiZjItNDM3MS1iMmU4LTBmMmNlMDZjNDE1OA==",
                                      },
                                    },
                                  },
                                ],
                              },
                            },
                          ],
                          "link": {
                            "payload": {
                              "openInNewTab": true,
                              "url": "http://www.authorize.net/",
                            },
                            "type": "OPEN_URL",
                          },
                          "type": "link",
                        },
                        {
                          "text": "",
                        },
                      ],
                      "type": "paragraph",
                    },
                    {
                      "children": [
                        {
                          "text": "",
                        },
                        {
                          "children": [
                            {
                              "text": "BlueSnap",
                              "typography": {
                                "id": "VHlwb2dyYXBoeTowNGI4OTZlMC0wZWEyLTRkMTMtYmU3ZS0xYmY1M2VmMjBiZjc=",
                                "style": [
                                  {
                                    "deviceId": "desktop",
                                    "value": {
                                      "color": {
                                        "alpha": 1,
                                        "swatchId": "U3dhdGNoOmJkODYxMWM5LTNiZjItNDM3MS1iMmU4LTBmMmNlMDZjNDE1OA==",
                                      },
                                    },
                                  },
                                ],
                              },
                            },
                          ],
                          "link": {
                            "payload": {
                              "openInNewTab": true,
                              "url": "https://www.bigcommerce.com/bluesnap/",
                            },
                            "type": "OPEN_URL",
                          },
                          "type": "link",
                        },
                        {
                          "text": "",
                        },
                      ],
                      "type": "paragraph",
                    },
                    {
                      "children": [
                        {
                          "text": "",
                        },
                        {
                          "children": [
                            {
                              "text": "Checkout.com",
                              "typography": {
                                "id": "VHlwb2dyYXBoeTowNGI4OTZlMC0wZWEyLTRkMTMtYmU3ZS0xYmY1M2VmMjBiZjc=",
                                "style": [
                                  {
                                    "deviceId": "desktop",
                                    "value": {
                                      "color": {
                                        "alpha": 1,
                                        "swatchId": "U3dhdGNoOmJkODYxMWM5LTNiZjItNDM3MS1iMmU4LTBmMmNlMDZjNDE1OA==",
                                      },
                                    },
                                  },
                                ],
                              },
                            },
                          ],
                          "link": {
                            "payload": {
                              "openInNewTab": true,
                              "url": "https://support.bigcommerce.com/s/article/Connecting-with-Checkoutcom/",
                            },
                            "type": "OPEN_URL",
                          },
                          "type": "link",
                        },
                        {
                          "text": "",
                        },
                      ],
                      "type": "paragraph",
                    },
                    {
                      "children": [
                        {
                          "text": "",
                        },
                        {
                          "children": [
                            {
                              "text": "CyberSource Direct",
                              "typography": {
                                "id": "VHlwb2dyYXBoeTowNGI4OTZlMC0wZWEyLTRkMTMtYmU3ZS0xYmY1M2VmMjBiZjc=",
                                "style": [
                                  {
                                    "deviceId": "desktop",
                                    "value": {
                                      "color": {
                                        "alpha": 1,
                                        "swatchId": "U3dhdGNoOmJkODYxMWM5LTNiZjItNDM3MS1iMmU4LTBmMmNlMDZjNDE1OA==",
                                      },
                                    },
                                  },
                                ],
                              },
                            },
                          ],
                          "link": {
                            "payload": {
                              "openInNewTab": true,
                              "url": "http://www.cybersource.com/",
                            },
                            "type": "OPEN_URL",
                          },
                          "type": "link",
                        },
                        {
                          "text": "",
                        },
                      ],
                      "type": "paragraph",
                    },
                  ],
                  "key": "c438a1d3-fee2-4eb4-b49b-f1856c12de42",
                  "type": "makeswift::controls::rich-text-v2",
                  "version": 2,
                },
              },
              "type": "TestComponent",
            },
          ],
        },
      },
      "type": "./components/Root/index.js",
    },
    "fonts": [],
    "id": "test-page-id",
    "locale": null,
    "localizedPages": [],
    "meta": {},
    "seo": {},
    "site": {
      "id": "test-site-id",
    },
    "snippets": [],
  },
}
`;

exports[`renders a makeswift::controls::rich-text-v2::mode::block placeholder when empty: resolvedValue 1`] = `
.ms-1uc9xwq {
  display: inline-block;
  width: 0;
  max-width: 100%;
  white-space: nowrap;
  opacity: 0.333;
  vertical-align: text-top;
}


NodeList [
  <div
    style="position: relative; white-space: pre-wrap; word-wrap: break-word;"
  >
    <span
      class="ms-1uc9xwq"
    >
      Write some text...
    </span>
  </div>,
]
`;

exports[`renders a makeswift::controls::rich-text-v2::mode::block placeholder when empty: snapshot 1`] = `
{
  "cacheData": {
    "apiResources": {},
    "localizedResourcesMap": {},
  },
  "document": {
    "data": {
      "key": "00000000-0000-0000-0000-000000000000",
      "props": {
        "children": {
          "columns": [
            {
              "deviceId": "desktop",
              "value": {
                "count": 12,
                "spans": [
                  [
                    12,
                  ],
                ],
              },
            },
          ],
          "elements": [
            {
              "key": "11111111-1111-1111-1111-111111111111",
              "props": {
                "propKey": undefined,
              },
              "type": "TestComponent",
            },
          ],
        },
      },
      "type": "./components/Root/index.js",
    },
    "fonts": [],
    "id": "test-page-id",
    "locale": null,
    "localizedPages": [],
    "meta": {},
    "seo": {},
    "site": {
      "id": "test-site-id",
    },
    "snippets": [],
  },
}
`;

exports[`renders a makeswift::controls::rich-text-v2::mode::inline placeholder when empty: resolvedValue 1`] = `
.ms-1uc9xwq {
  display: inline-block;
  width: 0;
  max-width: 100%;
  white-space: nowrap;
  opacity: 0.333;
  vertical-align: text-top;
}


NodeList [
  <div
    style="position: relative; white-space: pre-wrap; word-wrap: break-word;"
  >
    <span
      class="ms-1uc9xwq"
    >
      Write some text...
    </span>
  </div>,
]
`;

exports[`renders a makeswift::controls::rich-text-v2::mode::inline placeholder when empty: snapshot 1`] = `
{
  "cacheData": {
    "apiResources": {},
    "localizedResourcesMap": {},
  },
  "document": {
    "data": {
      "key": "00000000-0000-0000-0000-000000000000",
      "props": {
        "children": {
          "columns": [
            {
              "deviceId": "desktop",
              "value": {
                "count": 12,
                "spans": [
                  [
                    12,
                  ],
                ],
              },
            },
          ],
          "elements": [
            {
              "key": "11111111-1111-1111-1111-111111111111",
              "props": {
                "propKey": undefined,
              },
              "type": "TestComponent",
            },
          ],
        },
      },
      "type": "./components/Root/index.js",
    },
    "fonts": [],
    "id": "test-page-id",
    "locale": null,
    "localizedPages": [],
    "meta": {},
    "seo": {},
    "site": {
      "id": "test-site-id",
    },
    "snippets": [],
  },
}
`;

exports[`renders provided text content: resolvedValue 1`] = `
.ms-1azh6ix {
  margin: 0;
}

.ms-1fa0n4z {
  -webkit-text-decoration: none;
  text-decoration: none;
}

@media only screen and (min-width: 769px) {
  .ms-ngb86t {
    color: hsla(238, 87%, 49%, 1);
    font-family: Lato;
    font-size: 16px;
  }
}

@media only screen and (min-width: 576px) and (max-width: 768px) {
  .ms-ngb86t {
    color: hsla(238, 87%, 49%, 1);
    font-family: Lato;
    font-size: 16px;
  }
}

@media only screen and (max-width: 575px) {
  .ms-ngb86t {
    color: hsla(238, 87%, 49%, 1);
    font-family: Lato;
    font-size: 16px;
  }
}

@media only screen and (min-width: 769px) {
  .ms-1kdcvyw {
    color: hsla(238, 87%, 49%, 1);
    font-family: Lato;
    font-size: 16px;
  }
}

@media only screen and (min-width: 576px) and (max-width: 768px) {
  .ms-1kdcvyw {
    color: hsla(238, 87%, 49%, 1);
    font-family: Lato;
    font-size: 16px;
  }
}

@media only screen and (max-width: 575px) {
  .ms-1kdcvyw {
    color: hsla(238, 87%, 49%, 1);
    font-family: Lato;
    font-size: 16px;
  }
}

@media only screen and (min-width: 769px) {
  .ms-1rtjhv5 {
    color: hsla(238, 87%, 49%, 1);
    font-family: Lato;
    font-size: 16px;
  }
}

@media only screen and (min-width: 576px) and (max-width: 768px) {
  .ms-1rtjhv5 {
    color: hsla(238, 87%, 49%, 1);
    font-family: Lato;
    font-size: 16px;
  }
}

@media only screen and (max-width: 575px) {
  .ms-1rtjhv5 {
    color: hsla(238, 87%, 49%, 1);
    font-family: Lato;
    font-size: 16px;
  }
}

@media only screen and (min-width: 769px) {
  .ms-xf1hck {
    color: hsla(238, 87%, 49%, 1);
    font-family: Lato;
    font-size: 16px;
  }
}

@media only screen and (min-width: 576px) and (max-width: 768px) {
  .ms-xf1hck {
    color: hsla(238, 87%, 49%, 1);
    font-family: Lato;
    font-size: 16px;
  }
}

@media only screen and (max-width: 575px) {
  .ms-xf1hck {
    color: hsla(238, 87%, 49%, 1);
    font-family: Lato;
    font-size: 16px;
  }
}

@media only screen and (min-width: 769px) {
  .ms-hen83v {
    color: hsla(238, 87%, 49%, 1);
    font-family: Lato;
    font-size: 16px;
  }
}

@media only screen and (min-width: 576px) and (max-width: 768px) {
  .ms-hen83v {
    color: hsla(238, 87%, 49%, 1);
    font-family: Lato;
    font-size: 16px;
  }
}

@media only screen and (max-width: 575px) {
  .ms-hen83v {
    color: hsla(238, 87%, 49%, 1);
    font-family: Lato;
    font-size: 16px;
  }
}


NodeList [
  <div
    style="position: relative; white-space: pre-wrap; word-wrap: break-word;"
  >
    <p
      class="ms-1azh6ix ms-1j3t2r8"
    >
      <span
        class="ms-h2ylxe"
      >
        ﻿
      </span>
      <a
        class="ms-1fa0n4z"
        href="https://www.bigcommerce.com/adyen"
        target="_blank"
      >
        <span
          class="ms-ngb86t"
        >
          Adyen
        </span>
      </a>
      <span
        class="ms-57jg1n"
      >
        ﻿
      </span>
    </p>
    <p
      class="ms-1azh6ix ms-je0jzm"
    >
      <span
        class="ms-16krg8e"
      >
        ﻿
      </span>
      <a
        class="ms-1fa0n4z"
        href="http://www.authorize.net/"
        target="_blank"
      >
        <span
          class="ms-1kdcvyw"
        >
          Authorize.net
        </span>
      </a>
      <span
        class="ms-xo2e6l"
      >
        ﻿
      </span>
    </p>
    <p
      class="ms-1azh6ix ms-tgdhbb"
    >
      <span
        class="ms-1m3t9gw"
      >
        ﻿
      </span>
      <a
        class="ms-1fa0n4z"
        href="https://www.bigcommerce.com/bluesnap/"
        target="_blank"
      >
        <span
          class="ms-1rtjhv5"
        >
          BlueSnap
        </span>
      </a>
      <span
        class="ms-160xu3m"
      >
        ﻿
      </span>
    </p>
    <p
      class="ms-1azh6ix ms-hemmi"
    >
      <span
        class="ms-19a9fzo"
      >
        ﻿
      </span>
      <a
        class="ms-1fa0n4z"
        href="https://support.bigcommerce.com/s/article/Connecting-with-Checkoutcom/"
        target="_blank"
      >
        <span
          class="ms-xf1hck"
        >
          Checkout.com
        </span>
      </a>
      <span
        class="ms-pb41vm"
      >
        ﻿
      </span>
    </p>
    <p
      class="ms-1azh6ix ms-19auvtu"
    >
      <span
        class="ms-emts86"
      >
        ﻿
      </span>
      <a
        class="ms-1fa0n4z"
        href="http://www.cybersource.com/"
        target="_blank"
      >
        <span
          class="ms-hen83v"
        >
          CyberSource Direct
        </span>
      </a>
      <span
        class="ms-1naeq91"
      >
        ﻿
      </span>
    </p>
  </div>,
]
`;

exports[`renders provided text content: snapshot 1`] = `
{
  "cacheData": {
    "apiResources": {
      "Swatch": [
        {
          "id": "U3dhdGNoOmJkODYxMWM5LTNiZjItNDM3MS1iMmU4LTBmMmNlMDZjNDE1OA==",
          "value": {
            "__typename": "Swatch",
            "hue": 238,
            "id": "U3dhdGNoOmJkODYxMWM5LTNiZjItNDM3MS1iMmU4LTBmMmNlMDZjNDE1OA==",
            "lightness": 49,
            "saturation": 87,
          },
        },
      ],
      "Typography": [
        {
          "id": "VHlwb2dyYXBoeTowNGI4OTZlMC0wZWEyLTRkMTMtYmU3ZS0xYmY1M2VmMjBiZjc=",
          "value": {
            "__typename": "Typography",
            "id": "VHlwb2dyYXBoeTowNGI4OTZlMC0wZWEyLTRkMTMtYmU3ZS0xYmY1M2VmMjBiZjc=",
            "name": "Body",
            "style": [
              {
                "deviceId": "desktop",
                "value": {
                  "color": null,
                  "fontFamily": "Lato",
                  "fontSize": {
                    "unit": "px",
                    "value": 16,
                  },
                  "fontWeight": null,
                  "italic": null,
                  "letterSpacing": null,
                  "lineHeight": null,
                  "strikethrough": null,
                  "textAlign": null,
                  "underline": null,
                  "uppercase": null,
                },
              },
            ],
          },
        },
      ],
    },
    "localizedResourcesMap": {},
  },
  "document": {
    "data": {
      "key": "00000000-0000-0000-0000-000000000000",
      "props": {
        "children": {
          "columns": [
            {
              "deviceId": "desktop",
              "value": {
                "count": 12,
                "spans": [
                  [
                    12,
                  ],
                ],
              },
            },
          ],
          "elements": [
            {
              "key": "11111111-1111-1111-1111-111111111111",
              "props": {
                "propKey": {
                  "descendants": [
                    {
                      "children": [
                        {
                          "text": "",
                        },
                        {
                          "children": [
                            {
                              "text": "Adyen",
                              "typography": {
                                "id": "VHlwb2dyYXBoeTowNGI4OTZlMC0wZWEyLTRkMTMtYmU3ZS0xYmY1M2VmMjBiZjc=",
                                "style": [
                                  {
                                    "deviceId": "desktop",
                                    "value": {
                                      "color": {
                                        "alpha": 1,
                                        "swatchId": "U3dhdGNoOmJkODYxMWM5LTNiZjItNDM3MS1iMmU4LTBmMmNlMDZjNDE1OA==",
                                      },
                                    },
                                  },
                                ],
                              },
                            },
                          ],
                          "link": {
                            "payload": {
                              "openInNewTab": true,
                              "url": "https://www.bigcommerce.com/adyen",
                            },
                            "type": "OPEN_URL",
                          },
                          "type": "link",
                        },
                        {
                          "text": "",
                        },
                      ],
                      "type": "paragraph",
                    },
                    {
                      "children": [
                        {
                          "text": "",
                        },
                        {
                          "children": [
                            {
                              "text": "Authorize.net",
                              "typography": {
                                "id": "VHlwb2dyYXBoeTowNGI4OTZlMC0wZWEyLTRkMTMtYmU3ZS0xYmY1M2VmMjBiZjc=",
                                "style": [
                                  {
                                    "deviceId": "desktop",
                                    "value": {
                                      "color": {
                                        "alpha": 1,
                                        "swatchId": "U3dhdGNoOmJkODYxMWM5LTNiZjItNDM3MS1iMmU4LTBmMmNlMDZjNDE1OA==",
                                      },
                                    },
                                  },
                                ],
                              },
                            },
                          ],
                          "link": {
                            "payload": {
                              "openInNewTab": true,
                              "url": "http://www.authorize.net/",
                            },
                            "type": "OPEN_URL",
                          },
                          "type": "link",
                        },
                        {
                          "text": "",
                        },
                      ],
                      "type": "paragraph",
                    },
                    {
                      "children": [
                        {
                          "text": "",
                        },
                        {
                          "children": [
                            {
                              "text": "BlueSnap",
                              "typography": {
                                "id": "VHlwb2dyYXBoeTowNGI4OTZlMC0wZWEyLTRkMTMtYmU3ZS0xYmY1M2VmMjBiZjc=",
                                "style": [
                                  {
                                    "deviceId": "desktop",
                                    "value": {
                                      "color": {
                                        "alpha": 1,
                                        "swatchId": "U3dhdGNoOmJkODYxMWM5LTNiZjItNDM3MS1iMmU4LTBmMmNlMDZjNDE1OA==",
                                      },
                                    },
                                  },
                                ],
                              },
                            },
                          ],
                          "link": {
                            "payload": {
                              "openInNewTab": true,
                              "url": "https://www.bigcommerce.com/bluesnap/",
                            },
                            "type": "OPEN_URL",
                          },
                          "type": "link",
                        },
                        {
                          "text": "",
                        },
                      ],
                      "type": "paragraph",
                    },
                    {
                      "children": [
                        {
                          "text": "",
                        },
                        {
                          "children": [
                            {
                              "text": "Checkout.com",
                              "typography": {
                                "id": "VHlwb2dyYXBoeTowNGI4OTZlMC0wZWEyLTRkMTMtYmU3ZS0xYmY1M2VmMjBiZjc=",
                                "style": [
                                  {
                                    "deviceId": "desktop",
                                    "value": {
                                      "color": {
                                        "alpha": 1,
                                        "swatchId": "U3dhdGNoOmJkODYxMWM5LTNiZjItNDM3MS1iMmU4LTBmMmNlMDZjNDE1OA==",
                                      },
                                    },
                                  },
                                ],
                              },
                            },
                          ],
                          "link": {
                            "payload": {
                              "openInNewTab": true,
                              "url": "https://support.bigcommerce.com/s/article/Connecting-with-Checkoutcom/",
                            },
                            "type": "OPEN_URL",
                          },
                          "type": "link",
                        },
                        {
                          "text": "",
                        },
                      ],
                      "type": "paragraph",
                    },
                    {
                      "children": [
                        {
                          "text": "",
                        },
                        {
                          "children": [
                            {
                              "text": "CyberSource Direct",
                              "typography": {
                                "id": "VHlwb2dyYXBoeTowNGI4OTZlMC0wZWEyLTRkMTMtYmU3ZS0xYmY1M2VmMjBiZjc=",
                                "style": [
                                  {
                                    "deviceId": "desktop",
                                    "value": {
                                      "color": {
                                        "alpha": 1,
                                        "swatchId": "U3dhdGNoOmJkODYxMWM5LTNiZjItNDM3MS1iMmU4LTBmMmNlMDZjNDE1OA==",
                                      },
                                    },
                                  },
                                ],
                              },
                            },
                          ],
                          "link": {
                            "payload": {
                              "openInNewTab": true,
                              "url": "http://www.cybersource.com/",
                            },
                            "type": "OPEN_URL",
                          },
                          "type": "link",
                        },
                        {
                          "text": "",
                        },
                      ],
                      "type": "paragraph",
                    },
                  ],
                  "key": "c438a1d3-fee2-4eb4-b49b-f1856c12de42",
                  "type": "makeswift::controls::rich-text-v2",
                  "version": 2,
                },
              },
              "type": "TestComponent",
            },
          ],
        },
      },
      "type": "./components/Root/index.js",
    },
    "fonts": [],
    "id": "test-page-id",
    "locale": null,
    "localizedPages": [],
    "meta": {},
    "seo": {},
    "site": {
      "id": "test-site-id",
    },
    "snippets": [],
  },
}
`;
